tests/errors/test_30.x
// Identifier declared void[]


fn main() -> void {

    let x: void[];
}